🐛 Add SOE prevention in lava flows